Fix tab-btns to fill tiny gap on sides

--- a/src/style.css
+++ b/src/style.css
@@ -9,12 +9,13 @@
 
 * {
     font-family:helvetica, arial, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     text-align:center;
 }
 body, html {
     height: 100%;
     margin: 0;
+    width: 100%;
 }
 h3 {
     font-family: 'FrescaReg';
@@ -76,7 +77,7 @@ span {
     cursor: pointer;
     padding: 14px 14px;
     font-size: 18px;
-    width: 33.3%;
+    width: 33.3333%;
     margin-top: -10px;
 }
 .tab-btn:hover {
